AstronomyHub.css
      /* AstronomyHub stylesheet */


      /* EXTERNAL RESOURCES */
@import url('https://fonts.googleapis.com/css?family=Comfortaa|Montserrat|Roboto|Roboto+Mono|Ubuntu');

      /*BASIC CONFIG*/
html{
  height: 100%;
}
body{
  margin:0;
  padding:0;
  background-color: #f00;
}

      /* FONTS */
body, head{
    font-family: 'Montserrat', sans-serif;

    font-family: 'Roboto', sans-serif;

    font-family: 'Roboto Mono', monospace;

    font-family: 'Ubuntu', sans-serif;

    font-family: 'Comfortaa', cursive;
}

      /* TEXT STYLES */
h1{
  font-family: 'Comfortaa', cursive;
  font-size: 2em;
  text-align: center;
  margin: .5em;
}

h2{
  font-family: 'Roboto',sans-serif;
  font-size: 1.5em;
  text-align: center;
  margin: .5em;
}

p{
  font-family: 'Montserrat', sans-serif;
  margin: 1em;
  font-size: 1em;
}

      /* SIDE MENU */

aside{
  z-index: 1;
  left:-60%;
  margin: 0 2em 0 0;
  width: 60%;
  position:fixed;
  padding: 0;
  height:100%;
  background-color: #424242;
  color:#dddddd;

  -webkit-transition:left 250ms ease-out;
  -moz-transition:left 250ms ease-out;
  -o-transition:left 250ms ease-out;
  transition:left 250ms ease-out;
}

aside:hover{
  left:0px;
}

nav {
  z-index: 2;
}

nav ul {
  margin:0;
  padding:0;
}

nav ul li{
  /*removing the default style*/
  text-decoration: none;
  list-style-type: none;
}

nav ul li>a{   /*The  '>' only selects the IMMEDIATE CHILD*/
padding: 1em;
display: block;
margin:1em, .5em;
}

nav ul li>a:hover{
  background-color: #009eff;
}

nav ul li ul{
  margin-left: 2em;

}

nav ul li ul a:hover{
  background-color: #f00;
}

nav li ul li {
  overflow:hidden;
  height: 0;
  -webkit-transition:height 250ms ease-out;
  -moz-transition:height 250ms ease-out;
  -o-transition:height 250ms ease-out;
  transition:height 250ms ease-out;
}




nav ul > li:hover ul li {
  height: 3em;
}

figure{
  padding:0;
  margin:0;
}

figcaption{
  padding:0;
  margin:0;
}

      /* OTHER */
img{
  width:100%;
  margin:0;
}

main{
  top:0;
  overflow: hidden;
  height: 100%;
  margin: 0 0 0 0;
  background-color: #555555;
  color:#fff;
}

.extendBtn{
  z-index: 0;
  top:75%;
  position: fixed;
  margin-left: calc(60%);
  width: 2em;
  height: 4em;
  border-radius: 0 2em 2em 0 ;
  background-color: #424242;
}

.arrow{
  margin: 60% 25% ;
  width: 10px;
  height: 2  0px;
}

#sideLogo{
  top:48px;
}

.cta{
  background-color: #009eff;
  border-radius: 2em;
  margin: 3em 35%;
  text-align: center;
  font-size: 2em;
  padding:.42em 0;

  display: block;
  width:30%;
}

      /* TABLET / Landscape-MOBILE */
@media only screen and (min-width: 540px) {
  aside{
    width:40%;
    left: -40%;
  }

  .extendBtn{
    margin-left: 40%;
  }

}

      /* DESKTOP ONLY */
@media only screen and (min-width: 768px) {
  aside {
    width: 20%;
    left: 0;
  }

  .extendBtn{
    display: none;
  }

}

